--- a/res/styles/dashboard.css
+++ b/res/styles/dashboard.css
@@ -1,8 +1,40 @@
+header {
+    grid-area: header;
+    background: #0C4653;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Josefin Sans;
+    font-size: 28px;
+}
+
 body {
     font-family: Josefin Sans;
     margin: 0;
     padding: 0;
-    background-color: #7CE7FF;
+    background-color: #ffffff;
+}
+
+footer {
+    grid-area: footer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Josefin Sans;
+    color: #188198;
+    font-size: 15px;
+    position: relative;
+}
+
+footer::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: #cccccc;
 }
 
 .grid-container {
@@ -12,17 +44,6 @@ body {
     grid-template-areas: "header" "main" "footer";
     width: 100%;
     height: 100vh;
-}
-
-header {
-    grid-area: header;
-    background: linear-gradient(to bottom, #0C4653, #7CE7FF);
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: Josefin Sans;
-    font-size: 28px;
 }
 
 
@@ -35,15 +56,39 @@ main {
     justify-content: space-between 10px and 20px;
 }
 
-footer {
-    grid-area: footer;
-    background: linear-gradient(to top, #188198, #7CE7FF);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: Josefin Sans;
-    color: white;
-    font-size: 15px;
+.logo {
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+    margin-left: 15px;
+    border-radius: 0.4rem;
+}
+
+.material-symbols-outlined {
+
+    font-size: 40px;
+    width: 50px;
+    height: 50px;
+    border-radius: 0.4rem;
+    background-color: #C4F0F9;
+    color: #188198;
+    box-shadow: none;
+    margin-left: auto;
+    position: relative;
+}
+#menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+}
+
+.material-symbols-outlined:hover #menu {
+    display: block;
+}
+
+.material-symbols-outlined:hover {
+    background-color: #ffffff;
 }
 
 button {
@@ -69,9 +114,52 @@ button:hover {
     background-color: #1bb1e7;
 }
 
-.logo {
-    width: 50px;
-    height: 50px;
-    margin: 10px;
-    border-radius: 0.4rem;
+
+ul {
+    list-style: none;
+    background: #C4F0F9;
+    border-radius: 1rem;
+    margin-left: auto;
+    margin-right: 20px;
+}
+
+ul li {
+    display: inline-block;
+    position: relative;
+
+}
+ul li a {
+    display: block;
+    padding: 15px 20px;
+    color: #188198;
+    text-decoration: none;
+    text-align: center;
+    font-size: 20px;
+    font-family: Josefin Sans;
+    
+
+}
+ul li ul.dropdown li {
+    display: block;
+
+}
+ul li ul.dropdown {
+    width: 100%;
+    background: #C4F0F9;
+    position: absolute;
+    z-index: 999;
+    display: none;
+
+}
+ul li a:hover {
+    background: #ffe9e9;
+    
+}
+ul li:hover ul.dropdown {
+    display: block;
+}
+
+*{
+    padding: 0;
+    margin: 0;
 }
