--- a/res/styles/inventory.css
+++ b/res/styles/inventory.css
@@ -49,13 +49,22 @@ body { /* The Body */
 }
 
 .item-details {
+    background-color: transparent;
+    border: none;
+    border-bottom: solid;
+    border-width: 1px;
+    border-color: rgba(0, 0, 0, 0.400);
     display: flex;
     justify-content: space-around;
     justify-items: center;
 }
 
+.item-details:hover {
+    background-color: rgba(0, 0, 0, 0.100);
+}
+
 .item-header {
-    background-color: #0C4653;
+    background-color: #0C4653 !important;
     color: white;
     position: sticky;
     top: 0;
@@ -63,12 +72,22 @@ body { /* The Body */
 
 .inventory-single-element {
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: space-evenly;
     justify-items: center;
     background-color: rgba(196, 240, 249, 1);
     margin: 10px;
+    padding: 10px;
     border-radius: 5px;
     box-shadow: black 0px 1px 4px;
+}
+
+.inventory-edit-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+    width: 100%;
 }
 
 .inventory-screen {
