--- a/res/styles/dashboard.css
+++ b/res/styles/dashboard.css
@@ -7,6 +7,7 @@ header {
     align-items: center;
     font-family: Josefin Sans;
     font-size: 28px;
+    box-shadow: black 0px 1px 4px;
 }
 
 body {
