--- a/res/styles/account.css
+++ b/res/styles/account.css
@@ -4,7 +4,7 @@
     border: 1px solid #ccc;
     border-radius: 10px;
     text-align: center;
-    margin: 0 auto;
+    margin: 2%;
     font-family: Josefin Sans;
 }
 
